force-app/main/default/objects/Database__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Source</label>
    <referenceTo>Data_Source__c</referenceTo>
    <relationshipLabel>Databases</relationshipLabel>
    <relationshipName>Database</relationshipName>
    <type>Lookup</type>
</CustomField>