force-app/main/default/objects/Database__c/fields/Database_Id__c.field-meta.xml
<CustomField>
    <fullName>Database_Id__c</fullName>
    <externalId>true</externalId>
    <label>Database Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>